# cloudzero-uca-tools

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/workflows/: auto.merge.dependabot.yaml  publish.yml  test.developer.branches.yaml  test.primary.branches.yaml
.semaphore/: semaphore.yml
docs/quick_starts/: quick_start_allocation_telemetry.md
docs/quick_starts/quick_start_allocation_telemetry/: explanation_of_allocation_data.md  quick_start_allocation_telemetry.md  scenario_1.md  scenario_2.md  scenario_3.md  scenario_4.md
docs/quick_starts/quick_start_unit_metric_telemetry/: explanation_of_unit_metric_data.md  quick_start_unit_metric_telemetry.md  scenario_1.md  scenario_2.md  scenario_3.md
mypythonlib/: __init__.py
tests/: conftest.py
tests/common/: test_cli.py  test_files.py
tests/data/: test_data.csv
tests/features/: test_generate.py  test_transform.py
uca/: __init__.py  __version__.py  constants.py  exceptions.py  main.py
uca/commands/: convert.py
uca/common/: __init__.py  aws.py  cli.py  custom_types.py  files.py  formatters.py  standards.py  types.py
uca/data/: alb_configuration.json  configuration.json  csv_configuration.json  data.csv  example_alb_logs  sample_uca_data.json  sample_uca_data.jsonl  template.json  test_configuration.json  test_data.csv  transform.jq
uca/features/: __init__.py  convert.py  generate.py  transform.py  translate.py  transmit.py
uca/interfaces/: uca_api.py
